[package]
name = "osm-2-ndjson"
version = "0.1.0"
authors = ["Boyd Johnson <johnson.boyd@gmail.com>"]
edition = "2018"

description = "CLI tool for turning osm pbf files into ndjson"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
arrayref = "^0.3"
bincode = "^1.3"
clap = "^2.33"
db-key = "^0.0.5"
flat_map = "0.0.9"
geojson = { version = "^0.20", features = ["geo-types"] }
geo-types = "^0.6"
itertools = "^0.9"
osmpbfreader = "^0.14"
serde = "^1.0"
serde_json = "^1.0"
smartstring = "^0.2"
store = { git = "https://github.com/boydjohnson/store" }
tempdir = "^0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
